--- a/MIAP/styleCSS/miap.css
+++ b/MIAP/styleCSS/miap.css
@@ -8,103 +8,20 @@ div {
 
 h1 {
     color:#fc3677;
-}
-
-#myLogo {
-    opacity: 1;
-    -webkit-transition: opacity 0.3s ease-in-out;
-    -moz-transition: opacity 0.3s ease-in-out;
-    -ms-transition: opacity 0.3s ease-in-out; 
-    -o-transition: opacity 0.3s ease-in-out;
-}
-#myLogo.fade {
-    opacity:0;
-}
-
-div {
-    width: 300px;
-    height: 200px;
-    background: #transparent;
-    font-size: 21px;
-    font-family: Trebuchet MS;
     text-align: center;
 }
 
-.float-up {
-    -webkit-animation-duration:2s;
-    -moz-animation-duration:2s;
-    -o-animation-duration:2s;
-    animation-duration:2s;
-    -webkit-animation-name:float-up;
-    -moz-animation-name:float-up;
-    -o-animation-name:float-up;
-    animation-name:float-up;
-    -webkit-animation-iteration-count:1;
-    -moz-animation-iteration-count:1;
-    -o-animation-iteration-count:1;
-    animation-iteration-count:1;
-    -webkit-animation-timing-function:ease-out;
-    -moz-animation-timing-function:ease-out;
-    -o-animation-timing-function:ease-out;
-    animation-timing-function:ease-out;
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    -o-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
-    position:absolute;
-    top:500px;
-}
-@-webkit-keyframes float-up {
-    0% {
-        top:500px;
-        opacity:0;
-    }
-    25% {
-        opacity:1;
-    }
-    
-    100% {
-        top:60px;
-    }
-}
-@-moz-keyframes float-up {
-    0% {
-        top:500px;
-        opacity:0;
-    }
-    25% {
-        opacity:1;
-    }
-    
-    }
-    100% {
-        top:60px;
-    }
-}
-@-o-keyframes float-up {
-    0% {
-        top:500px;
-        opacity:0;
-    }
-    25% {
-        opacity:1;
-    }
-    
-    
-    100% {
-        top:60px;
-    }
-}
-@-keyframes float-up {
-    0% {
-        top:500px;
-        opacity:0;
-    }
-    25% {
-        opacity:1;
-    }
-   
-    100% {
-        top:60px;
-    }
-}
+.ball {
+    margin-top: 50px;
+    margin-left: -300px;
+    width: 60%;
+    height: 50%;
+    background-color: transparent;
+    border-radius: 100px;
+    transition: 2s;
+    line-height: 40px;
+    text-align: center;
+  }
+  
+
+
