--- a/MIAP/styleCSS/equipe.css
+++ b/MIAP/styleCSS/equipe.css
@@ -9,9 +9,14 @@ div {
 h1 {
     color:#fc3677;
     text-align: center;
+    transition : 1s;
 }
 
-.ball {
+h1:hover {
+    color:#f49032;
+}
+
+/*.ball {
     margin-top: 50px;
     margin-left: -300px;
     width: 60%;
@@ -21,7 +26,7 @@ h1 {
     transition: 2s;
     line-height: 40px;
     text-align: center;
-  }
+  }*/
   
 
 
