--- a/MIAP/styleCSS/miap.css
+++ b/MIAP/styleCSS/miap.css
@@ -11,6 +11,11 @@ h1 {
     text-align: center;
 }
 
+h1:hover {
+    color:#f49032;
+    transition : 1s;
+}
+
 .ball {
     margin-top: 50px;
     margin-left: -300px;
