--- a/MIAP/styleCSS/miap.css
+++ b/MIAP/styleCSS/miap.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Lucida Console', Monaco, monospace;
+}
+
 div {
     color : #f49032;
 }
@@ -42,9 +46,60 @@ h1:hover {
     background:linear-gradient(deeppink,orange);
 }
 
-.navbar .navbar-collapse .navlink:hover .dropdown-menu{
-    background:linear-gradient(deeppink,orange);
+
+.contact-form{
+    background: linear-gradient(deeppink,orange);
+    margin-top: 10%;
+    margin-bottom: 5%;
+    border-radius: 10px 10px;
+    width: 70%;
 }
+.contact-form .form-control{
+    border-radius:1rem;
+}
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: black;
+}
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #dc3545;
+    font-weight: 600;
+    color: black;
+    cursor: pointer;
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
+
+
 
 
 
