--- a/MIAP/styleCSS/miap.css
+++ b/MIAP/styleCSS/miap.css
@@ -17,20 +17,27 @@ h1:hover {
     transition : 1s;
 }
 
-/*.ball {
-    margin-top: 50px;
-    margin-left: -300px;
-    width: 60%;
-    height: 50%;
-    background-color: transparent;
-    border-radius: 100px;
-    transition: 2s;
-    line-height: 40px;
+img#myLogo{
+    margin-top: 10px;
+    margin-left: 550px;
     text-align: center;
-}*/
+    width: 230px;
+    height: 120px;
+    object-fit: cover;
+}
+
+img.res{
+    margin-top: 25px;
+    margin-left: 6px;
+    float: right;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+}
 
 .navbar{
-    background: linear-gradient(deeppink,orange);
+    background: transparent;
+    border-color: deeppink;
     font-size: 15px;
 }
 
@@ -40,7 +47,7 @@ h1:hover {
 }
 
 .navbar .navbar-collapse .navlink:hover{
-    color : white;
+    background: linear-gradient(deeppink,orange) ;
 }
 
 .navbar .navbar-collapse .dropdown-menu{
@@ -107,7 +114,17 @@ h1:hover {
     height: 5px;
 }
 
-
-
+.separation{
+    height: 2px;
+    color: #839d2d;
+    background-color: #839D2D;
+    width: 50%;
+    border: none;
+}
+.imgBlog{
+    width: 550px;
+    height: 550px;
+    object-fit: cover;
+}
 
 
