--- a/Principal/vues/css/styleLogin.css
+++ b/Principal/vues/css/styleLogin.css
@@ -55,3 +55,20 @@ input{
 .espace{
     height: 100px;
 }
+
+#mapid{
+    width: 95%;
+    height: 90vh;
+    border-radius: 2px;
+}
+
+#mapid:hover{
+    cursor: pointer;
+}
+
+#containerCarte{
+    background-color: #74bacf;
+    padding: 3vw;
+    height: 90vh;
+    display: flexbox;
+}
