--- a/Principal/vues/css/styleLogin.css
+++ b/Principal/vues/css/styleLogin.css
@@ -57,8 +57,8 @@ input{
 }
 
 #mapid{
-    width: 95%;
-    height: 90vh;
+    width: 100%;
+    height: 100vh;
     border-radius: 2px;
 }
 
@@ -71,4 +71,8 @@ input{
     padding: 3vw;
     height: 90vh;
     display: flexbox;
+}
+
+#ajoutEtaBtn{
+    display: none;
 }
