--- a/Principal/css/style.css
+++ b/Principal/css/style.css
@@ -23,7 +23,6 @@
 @import url(animate.min.css);
 @import url(normalize.css);
 @import url(meanmenu.css);
-@import url(owl.carousel.min.css);
 @import url(slick.css);
 @import url(jquery-ui.css);
 @import url(nice-select.css);
@@ -342,34 +341,6 @@ a.readmore_bt {
 
 
 /*----------------------------
-    preloader area
-----------------------------*/
-
-.loader_bg {
-	position: fixed;
-	z-index: 9999999;
-	background: #fff;
-	width: 100%;
-	height: 100%;
-}
-
-.loader {
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.loader img {
-	width: 280px;
-}
-
-
-/*----------------------------
     scroll to top area
 ----------------------------*/
 
@@ -471,256 +442,12 @@ nav.main-menu {
 	color: #000;
 }
 
-.right_cart_section {
-	float: right;
-	width: auto;
-}
-
-.right_cart_section ul {
-	float: left;
-	min-height: auto;
-	margin: 0;
-	padding: 12px 0 0;
-}
-
-.right_cart_section .cart_icons {
-	padding: 18px 0 0;
-}
-
 .main-menu ul>li nth:child(5) a {
 	padding-right: 0px;
 }
 
-.right_cart_section ul li {
-	float: left;
-	font-size: 17px;
-	font-weight: 400;
-	color: #fff;
-	margin-right: 30px;
-}
-
-.right_cart_section ul.cart_update li {
-	font-size: 13px;
-	color: #ccc;
-	line-height: normal;
-	margin: 0;
-	font-weight: 300;
-}
-
-.right_cart_section ul.cart_update li span {
-	font-size: 18px;
-	font-weight: 300;
-	color: #fff;
-	line-height: 21px;
-}
-
-.right_cart_section ul li i {
-	margin-right: 10px;
-	margin-top: 5px;
-	float: left;
-	color: #fff;
-	font-size: 21px;
-}
-
-.right_cart_section ul li a {
-	color: #fff;
-}
-
-
 /*-- end header middle --*/
 
-.top-bar-info {
-	background: #111111;
-	padding: 5px 0px;
-}
-
-.top-menu-left {
-	float: left;
-}
-
-.top-menu-left li {
-	position: relative;
-	display: inline-block;
-	margin-right: 11px;
-	padding-right: 12px;
-}
-
-.top-menu-left li::before {
-	content: '';
-	position: absolute;
-	right: 0;
-	top: 9px;
-	height: 10px;
-	border-right: 1px dotted #999;
-}
-
-.top-menu-left li:last-child::before {
-	display: none;
-}
-
-.top-menu-left li:last-child {
-	padding: 0px;
-	margin: 0px;
-}
-
-.top-menu-left li a {
-	color: #ffffff;
-	font-size: 12px;
-	text-transform: uppercase;
-	text-decoration: none;
-}
-
-.top-menu-left li a:hover {
-	color: #38c8a8;
-}
-
-.right-dropdown-language {
-	float: right;
-	margin-left: 12px;
-}
-
-.dropdown-bar .dropdown-link {
-	position: absolute;
-	z-index: 1009;
-	top: 40px;
-	left: 0;
-	right: auto;
-	min-width: 50px;
-	padding: 15px;
-	background: #ffffff;
-	list-style: none;
-	border: 2px solid #38c8a8;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	-webkit-transition: opacity 0.2s ease 0s, visibility 0.2s linear 0s;
-	-o-transition: opacity 0.2s ease 0s, visibility 0.2s linear 0s;
-	transition: opacity 0.2s ease 0s, visibility 0.2s linear 0s;
-	text-align: left;
-}
-
-.dropdown-bar:hover .dropdown-link {
-	opacity: 1;
-	visibility: visible;
-	top: 25px;
-}
-
-.dropdown-bar.right-dropdown-language>a::after {
-	font-family: 'FontAwesome';
-	content: "\f107";
-	text-decoration: none;
-	padding-left: 4px;
-	color: #ffffff;
-}
-
-.right-dropdown-language>a {
-	line-height: 10px;
-	padding: 5px 5px;
-	cursor: pointer;
-}
-
-.dropdown-bar .dropdown-link li a {
-	color: #111111;
-	display: block;
-	font-size: 12px;
-	line-height: 15px;
-	padding: 5px 0;
-}
-
-.dropdown-bar .dropdown-link li a:hover {
-	color: #38c8a8;
-}
-
-.dropdown-bar .dropdown-link li a img {
-	margin-right: 7px;
-}
-
-.dropdown-bar .dropdown-link li.active {
-	font-weight: bold;
-}
-
-.right-dropdown-language .dropdown-link {
-	min-width: 100px;
-	padding: 7px 10px;
-	color: #111111;
-}
-
-.dropdown-bar {
-	position: relative;
-	padding: 0 5px;
-	font-size: 13px;
-}
-
-.dropdown-bar .dropdown-link.right-sd {
-	left: auto;
-	right: 0;
-}
-
-.right-dropdown-currency {
-	float: right;
-	margin-left: 12px;
-}
-
-.dropdown-bar.right-dropdown-currency>a::after {
-	font-family: 'FontAwesome';
-	content: "\f107";
-	text-decoration: none;
-	padding-left: 4px;
-	color: #ffffff;
-}
-
-.right-dropdown-currency>a {
-	line-height: 10px;
-	padding: 5px 5px;
-	cursor: pointer;
-	color: #ffffff;
-}
-
-.right-dropdown-currency .dropdown-link {
-	min-width: 100px;
-	padding: 7px 10px;
-	color: #111111;
-}
-
-.right-dropdown-currency .dropdown-link {
-	min-width: 55px;
-	padding: 7px 10px;
-}
-
-.right-dropdown-currency .dropdown-link li a span.symbol {
-	margin-right: 7px;
-}
-
-#login-modal .modal-content {
-	border-radius: 0px;
-}
-
-#login-modal .modal-content .modal-header {
-	background: #38c8a8;
-	border-radius: 0;
-}
-
-#login-modal .modal-content .modal-body .form-group input {
-	background: #ffffff;
-	border: 1px solid #c8c8c8;
-	border-radius: 0px;
-}
-
-#login-modal .modal-content .modal-body .form-group input:focus {
-	border: 1px solid #c8c8c8 !important;
-}
-
-#login-modal .modal-content form {
-	margin-bottom: 10px;
-}
-
-.modal-title {
-	padding: 0px;
-	color: #ffffff;
-	font-size: 18px;
-	text-transform: uppercase;
-}
 
 .btn-template-outlined {
 	background: #111111;
@@ -747,194 +474,6 @@ nav.main-menu {
 	padding: 30px 0px;
 }
 
-.header-search {
-	padding: 3px 0px;
-}
-
-.header-search form {
-	position: relative;
-	-webkit-box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.2);
-	box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.2);
-}
-
-.header-search .btn-group.bootstrap-select {
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-
-.header-search input {
-	width: 100%;
-	min-height: 45px;
-	border-radius: 0px;
-	border: none;
-	padding-left: 15px;
-	border: 1px solid #e0e7ed;
-}
-
-.header-search form .search-btn {
-	position: absolute;
-	right: 0;
-	top: 0;
-	border: 0;
-	color: #fff;
-	font-size: 20px;
-	padding: 4px 15px;
-	border-radius: 0px;
-	background-color: #38c8a8;
-	cursor: pointer;
-}
-
-.header-search form .search-btn:hover {
-	background: #111111;
-}
-
-.cart-box {
-	float: right;
-	margin-left: 10px;
-	position: relative;
-}
-
-.cart-content-box {
-	position: absolute;
-	z-index: 1009;
-	top: 40px;
-	left: auto;
-	right: 0;
-	min-width: 250px;
-	max-width: 250px;
-	padding: 15px;
-	background: #ffffff;
-	list-style: none;
-	border: 2px solid #38c8a8;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	text-align: left;
-	-webkit-transform: scaleY(0);
-	transform: scaleY(0);
-	-webkit-transform-origin: 0 0 0;
-	transform-origin: 0 0 0;
-	-webkit-transition: all 0.3s ease 0s;
-	transition: all 0.3s ease 0s;
-	transition: all 0.3s ease 0s;
-}
-
-.cart-box:hover .cart-content-box {
-	opacity: 1;
-	visibility: visible;
-	top: 100%;
-	-webkit-transform: scaleY(1);
-	transform: scaleY(1);
-}
-
-.inner-cart {
-	background: #38c8a8;
-	border-radius: 2px;
-	padding: 0px;
-	color: #ffffff;
-	position: relative;
-	width: 40px;
-	height: 40px;
-	text-align: center;
-}
-
-.cart-box .inner-cart:hover {
-	color: #ffffff;
-}
-
-.line-cart {
-	float: left;
-	line-height: 40px;
-	margin-right: 9px;
-}
-
-.cart-box a {
-	display: inline-block;
-}
-
-.cart-box a:hover {
-	color: #38c8a8;
-}
-
-.cart-box a span.icon {
-	background: #38c8a8;
-	width: 30px;
-	height: 40px;
-	display: inline-block;
-	line-height: 40px;
-	text-align: center;
-	color: #ffffff;
-	position: relative;
-	border-radius: 2px;
-}
-
-.cart-box a .p-up {
-	position: absolute;
-	right: -8px;
-	top: -8px;
-	line-height: initial;
-	background: #38c8a8;
-	padding: 3px;
-	border-radius: 50%;
-	width: 17px;
-	height: 17px;
-	font-size: 12px;
-	text-align: center;
-	line-height: 10px;
-}
-
-.wish-box {
-	float: right;
-}
-
-.wish-box a {
-	display: inline-block;
-}
-
-.wish-box a:hover {
-	color: #38c8a8;
-}
-
-.wish-box a span.icon {
-	background: #38c8a8;
-	width: 40px;
-	height: 40px;
-	display: inline-block;
-	line-height: 40px;
-	text-align: center;
-	color: #ffffff;
-	position: relative;
-	border-radius: 2px;
-}
-
-.wish-box a span.icon:hover {
-	background: #111111;
-}
-
-.cart-content-right {
-	padding: 5px 0px;
-}
-
-.cart-content-box .items {
-	text-align: center;
-}
-
-.product-media {
-	width: 60px;
-	float: left;
-	position: relative;
-}
-
-.cart-content-box .items:hover .product-media::before {
-	transform: scale(1);
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-ms-transform: scale(1);
-	-o-transform: scale(1);
-}
-
 .product-media::before {
 	position: absolute;
 	content: '';
@@ -954,80 +493,6 @@ nav.main-menu {
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	-o-transition: all 0.5s ease;
-}
-
-.cart-content-box .items .item .remove {
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	background: #38c8a8;
-	color: #ffffff;
-	width: 20px;
-	height: 20px;
-	line-height: 18px;
-	border-radius: 2px;
-}
-
-.cart-content-box .items .item {
-	margin-bottom: 10px;
-	padding-bottom: 10px;
-	border-bottom: 1px solid #e0e7ed;
-	position: relative;
-}
-
-.cart-content-box .items .item .product-info {
-	padding-top: 10px;
-	padding-left: 71px;
-	text-align: left;
-}
-
-.cart-content-box .items .item .remove:hover {
-	background: #111111;
-}
-
-.subtotal {
-	text-align: left;
-	text-transform: capitalize;
-	color: #38c8a8;
-	font-weight: 500;
-	margin-bottom: 15px;
-}
-
-.subtotal span {
-	font-weight: bold;
-	color: #111111;
-	padding-left: 15px;
-	float: right;
-}
-
-.actions .btn-process {
-	padding: 5px 16px;
-	color: #ffffff;
-	font-family: 'Roboto', sans-serif;
-	font-size: 14px;
-	border-radius: 2px;
-	overflow: hidden;
-}
-
-.actions .btn-process:hover {
-	color: #ffffff;
-}
-
-.line-cart {
-	position: relative;
-}
-
-.wish-box a span.icon span {
-	position: absolute;
-	right: -8px;
-	top: -8px;
-	line-height: initial;
-	background: #38c8a8;
-	padding: 3px;
-	border-radius: 50%;
-	width: 17px;
-	height: 17px;
-	font-size: 12px;
 }
 
 .main-menu {
@@ -1565,13 +1030,6 @@ nav.main-menu {
 /** gallery section css **/
 
 
-
-/** end section **/
-
-
-/** end service section **/
-
-
 /** contenu section **/
 
 .contenu {
@@ -1663,27 +1121,6 @@ nav.main-menu {
 .fa.fa-quote-left {
 	padding-right: 5px;
 }
-
-.carousel-caption.relat h3 {
-	color: #0fc690;
-	font-size: 20px;
-	text-transform: uppercase;
-	line-height: 20px;
-	padding-bottom: 5px;
-}
-
-.carousel-caption.relat span {
-	color: #121514;
-	font-size: 16px;
-	text-transform: uppercase;
-	padding-bottom: 5px;
-	display: inline-block;
-}
-
-.carousel-caption.relat p {
-	color: #121514;
-}
-
 
 .aide .contact h3 {
 	color: #000;
@@ -1859,24 +1296,6 @@ ul.contant_icon li img {
 	border: #000 solid 1px;
 }
 
-.copyright {
-	background-color: #fff;
-	padding: 20px 0px;
-	;
-	margin-top: 55px;
-}
-
-.copyright p {
-	color: #000;
-	font-size: 18px;
-	line-height: 22px;
-	text-align: center;
-}
-
-.copyright a:hover {
-	color: #0fc690
-}
-
 
 /*---------------------------------------------------------------------
     ener page css
@@ -1937,4 +1356,14 @@ ul.contant_icon li img {
 	padding: 40px 0;
 	font-weight: 500;
 	text-align: center;
+}
+
+.imgBlog{
+    width: 100%;
+    max-width: 350px;
+}
+
+#logo{
+    width: 100%;
+    max-width: 150px;
 }
