--- a/MIAP/styleCSS/miap.css
+++ b/MIAP/styleCSS/miap.css
@@ -37,7 +37,7 @@ img.res{
 
 .navbar{
     background: transparent;
-    border-color: deeppink;
+    border-color: #ff1493;
     font-size: 15px;
 }
 
@@ -47,11 +47,11 @@ img.res{
 }
 
 .navbar .navbar-collapse .navlink:hover{
-    background: linear-gradient(deeppink,orange) ;
+    background: linear-gradient(deeppink, #ffa500) ;
 }
 
 .navbar .navbar-collapse .dropdown-menu{
-    background:linear-gradient(deeppink,orange);
+    background:linear-gradient(deeppink, #ffa500);
 }
 
 
