--- a/Principal/css/style.css
+++ b/Principal/css/style.css
@@ -874,7 +874,16 @@ nav.main-menu {
 .imgBlog{
 	width: 450px;
 	height: 450px;
+	margin:auto;
 	object-fit: cover;
+	-moz-border-radius:10px 0;
+	-webkit-border-radius:10px 0;
+	border-radius:10px 0;
+	box-shadow: 8px 8px 12px #aaa;
+}
+
+a[href*="Collapse"]{
+	color: deeppink;
 }
 
 /** about section **/
@@ -1101,7 +1110,7 @@ nav.main-menu {
 /** end contenu section **/
 
 .aide {
-	background: #0fc690;
+	background: white;
 	padding: 60px 0px;
 }
 
@@ -1113,9 +1122,9 @@ nav.main-menu {
 	padding: 0px 0px 6px 0px;
 	font-size: 30px;
 	font-weight: bold;
-	color: #fff;
+	color: black;
 	line-height: 46px;
-	border-bottom: #fff solid 1px;
+	border-bottom: orange solid 1px;
 	width: 184px;
 	margin: 0 auto;
 	margin-bottom: 60px;
@@ -1147,7 +1156,7 @@ nav.main-menu {
 }
 
 .aide .contact {
-	background: #fff;
+	background: #FF616B;
 	width: 100%;
 	height: 100%;
 	padding: 30px;
@@ -1185,8 +1194,8 @@ nav.main-menu {
 }
 
 .aide .contact .send:hover {
-	background-color: #0fc690;
-	border: #0fc690 solid 1px;
+	background-color: orange;
+	border: orange solid 1px;
 	color: #fff;
 }
 
