--- a/Principal/vues/css/styleLogin.css
+++ b/Principal/vues/css/styleLogin.css
@@ -10,7 +10,7 @@ a{
 .connect{
     box-sizing: border-box;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
-    padding: 2em;
+    padding: 5em;
     margin: 5px;
     padding-top: 50px;
     border-radius: 5px;
@@ -19,12 +19,20 @@ a{
     background: rgb(255, 255, 255,0.75);
 }
 
-input{
-    border-radius: 5px;
-    border-color: ivory;
-    min-width: 100px;
-    width: 300px;
-    border: none;
+.centre input{
+    border: 0;
+    border-bottom: 1px solid;
+    padding: 6px 0;
+    display: block;
+    width: 100%;
+
+}
+
+.form-co-ins .btn-link {
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+    margin: auto;
 }
 
 .Hdl{
@@ -36,6 +44,7 @@ input{
     justify-content: center;
     display: flex;
 }
+
 
 .logocoins{
     position: absolute;
@@ -73,10 +82,39 @@ input{
 
 #ajoutEtaBtn{
     display: none;
+    border-radius: 5px;
+    background-color: #FF9999;
+    color: black;
+    padding: 5px;
+    margin: auto;
 }
 
 #infosEta{
     display: none;
+}
+
+#infoNom {
+    border: 0;
+    border-bottom: 1px solid;
+    padding: 6px 0;
+    display: block;
+    width: 60%;
+}
+
+#infoAdresse{
+    border: 0;
+    border-bottom: 1px solid;
+    padding: 6px 0;
+    display: block;
+    width: 60%;
+}
+
+#locationField input{
+    border: 0;
+    border-bottom: 1px solid;
+    padding: 6px 0;
+    display: block;
+    width: 60%;
 }
 
 #longlat{
@@ -94,4 +132,16 @@ input{
 .startcenter{
     display: inline-block;
     text-align: left;
+}
+
+#input-ami{
+    border: 0;
+    border-bottom: 1px solid;
+    padding: 6px 0;
+    display: block;
+    width: 100%;
+}
+
+.btn-ami{
+    background-color: #FF9999;
 }
