--- a/Principal/css/style.css
+++ b/Principal/css/style.css
@@ -429,6 +429,7 @@ a.readmore_bt {
 
 nav.main-menu {
 	float: right;
+	margin-top:35px;
 	margin-left: 0;
 }
 
@@ -807,8 +808,8 @@ nav.main-menu {
 
 .header {
 	background: #F29F05;
-	padding: 40px 10px;
-	padding-bottom: 35px;
+	padding: 6px 6px;
+	padding-bottom: 15px;
 }
 
 .logo a {
@@ -843,8 +844,8 @@ nav.main-menu {
 
 .banner-main .carousel-caption a {
 	text-transform: uppercase;
-	border: #F29F05 solid 1px;
-	background: #F29F05;
+	border: #F25E5E solid 1px;
+	background: #F25E5E;
 	width: 196px;
 	padding: 12px 0;
 	display: inline-block;
@@ -855,8 +856,8 @@ nav.main-menu {
 }
 
 .banner-main .carousel-caption a:hover {
-	border: #F25E5E solid 1px;
-	background: #F25E5E;
+	border: #F29F05 solid 1px;
+	background: #F29F05;
 }
 
 /*---------------------------------------------------------------------
@@ -884,6 +885,11 @@ nav.main-menu {
 
 a[href*="Collapse"]{
 	color: deeppink;
+}
+
+.colCompte p{
+	color:black;
+	text-align: justify;
 }
 
 /** about section **/
@@ -916,7 +922,7 @@ a[href*="Collapse"]{
 }
 
 .about .titlepage {
-	text-align: center;
+	text-align: justify;
 	padding-bottom: 60px;
 }
 
@@ -924,6 +930,7 @@ a[href*="Collapse"]{
 	padding: 0px 0px 6px 0px;
 	font-size: 40px;
 	font-weight: bold;
+	text-align: center;
 	color: #050303;
 	line-height: 46px;
 	border-bottom: #F29F05 solid 1px;
@@ -950,8 +957,8 @@ a[href*="Collapse"]{
 
 .about .img-box a {
 	text-transform: uppercase;
-	border: #F29F05 solid 1px;
-	background: #F29F05;
+	border: #F25E5E solid 1px;
+	background: #F25E5E;
 	width: 206px;
 	padding: 15px 0;
 	display: inline-block;
@@ -962,8 +969,8 @@ a[href*="Collapse"]{
 }
 
 .about .img-box a:hover {
-	border: #F25E5E solid 1px;
-	background: #F25E5E;
+	border: #F29F05 solid 1px;
+	background: #F29F05;
 }
 
 
@@ -1066,6 +1073,7 @@ a[href*="Collapse"]{
 
 .contenu .titlepage {
 	padding-bottom: 60px;
+
 	text-align: center;
 }
 
@@ -1078,11 +1086,21 @@ a[href*="Collapse"]{
 	font-size: 40px;
 	font-weight: bold;
 	color: #050303;
+	border-bottom:  #F25E5E solid 1px;
 	line-height: 46px;
-	margin-bottom: 0px;
-	margin-bottom: 20px;
+	width: 184px;
+	margin: 0 auto;
+	margin-bottom: 30px;
 }
 
+.video-pre{
+	text-align: center;
+}
+
+.contenu p{
+	color:black;
+	text-align: justify;
+}
 
 .read-more {
 	display: flex;
@@ -1116,19 +1134,26 @@ a[href*="Collapse"]{
 }
 
 .aide .titlepage {
-	text-align: center;
+	width:100%;
 }
 
 .aide .titlepage h3 {
+	width: 30%;
+	text-align: center;
 	padding: 0px 0px 6px 0px;
-	font-size: 30px;
+	font-size: 40px;
 	font-weight: bold;
 	color: black;
 	line-height: 46px;
 	border-bottom: orange solid 1px;
-	width: 184px;
+
 	margin: 0 auto;
 	margin-bottom: 60px;
+}
+
+.aide .faq a{
+	font-size:16px;
+	color: #D93672;
 }
 
 .banner-bg {
@@ -1157,7 +1182,7 @@ a[href*="Collapse"]{
 }
 
 .aide .contact {
-	background: #FF616B;
+	background: linear-gradient(#F29F05,#D93672);
 	width: 100%;
 	height: 100%;
 	padding: 30px;
@@ -1183,9 +1208,9 @@ a[href*="Collapse"]{
 
 .aide .contact .send {
 	font-size: 16px;
-	border: #000 solid 1px;
+	border: #F29F05 solid 1px;
 	padding: 10px 50px;
-	background-color: #000;
+	background-color: #F29F05;
 	color: #fff;
 	display: flex;
 	justify-content: center;
@@ -1195,13 +1220,24 @@ a[href*="Collapse"]{
 }
 
 .aide .contact .send:hover {
-	background-color: orange;
-	border: orange solid 1px;
+	background-color: #F25E5E;
+	border: #F25E5E solid 1px;
 	color: #fff;
 }
 
 .width {
 	width: 25%;
+}
+
+#scroll_to_top {
+	position: fixed;
+	width: 25px;
+	height: 25px;
+	bottom: 50px;
+	right: 30px;
+}
+#scroll_to_top img {
+	width: 25px;
 }
 
 .footer {
@@ -1217,10 +1253,11 @@ a[href*="Collapse"]{
 	padding-bottom: 20px;
 }
 
-.footer .address i {
+
+.footer .address a,p {
 	color: #fff;
 	font-size: 15px;
-	font-weight: 500;
+	font-weight: 300;
 }
 
 .footer .address i img {
@@ -1388,7 +1425,7 @@ ul.contant_icon li img {
 
 #logo{
     width: 100%;
-    max-width: 130px;
+    max-width: 100px;
 	text-align: center;
 }
 
